--- a/style.css
+++ b/style.css
@@ -21,9 +21,7 @@
 #logo{
     margin-top: 10px;
 }
-.search{
-    position: relative;
-}
+
 #right{
     display: flex;
     margin-top: 10px;
@@ -41,6 +39,7 @@
 #search-text{
     display: flex;
     padding: 10px 0px 7px 30px;
+    border-radius: 5px;
 }
 #banner{
     position: relative;
@@ -93,6 +92,50 @@
     justify-content: center;
     width: 50%;
 }
+#sort-btn{
+    display: flex;
+    background-color: #fff;
+    border: none;
+    position: absolute;
+    margin-right: 25%;
+    margin-top: 20px;
+    font-size: 15px;
+}
+#sort-text{
+    display: flex;
+    padding: 1px 0px 5px 40px;
+    font-size: 20px;
+    border: none;
+    border-bottom: 1px solid;
+}
+
+#sort-by{
+    display: flex;
+    justify-content: space-around;
+}
+#sort-by-right{
+    display: flex;
+    font-size: 20px;
+    background-color: rgba(177, 175, 175, 0.366);
+    align-items: center;
+}
+#sort-by-btn{
+    display: flex;
+    background-color: rgba(177, 175, 175, 0);
+    border: none;
+    font-size: 15px;
+    position: absolute;
+    margin-left: 6%;
+    margin-top: 15px;
+}
+
+
+
+
+
+
+
+
 .left-one{
     background-color: #459D7A;
     color: aliceblue;
@@ -210,7 +253,6 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-    /* align-items: start; */
     align-content: space-around;
     margin-left: 350px;
 }
@@ -218,7 +260,8 @@
     border-radius: 8px;
     background-color: #1D2128;
     border-color: rgba(255, 255, 255, 0.818);
-    padding: 10px 90px 18px 50px;
+    padding: 10px 10px 18px 50px;
+    color: #fff;
 }
 .but-sub{
     color: white;
@@ -228,6 +271,17 @@
     border-bottom-right-radius: 10px;
     height: 55px;
     position: absolute;
-    left: 85%;
+    left: 82%;
     border: none;
 }
+#email-btn{
+    display: flex;
+    font-size: 20px;
+    border: none;
+    background-color: #1D2128;
+    color: #fff;
+    position: absolute;
+    margin-top: 105px;
+    margin-left: 8px;
+}
+
